# seapy

./: .gitignore  LICENSE.txt  MANIFEST.in  Makefile  README.md  Readme.md  __init__.py  cdl_parser.py  constituents.npz  download.py  environ.py  filt.py  filter.py  get_files.py  hawaii.py  lib.py  map.py  mapping.py  meson.build  oa.py  plot.py  progbar.py  progressbar.py  pyproject.toml  qserver.py  requirements.txt  setup.py  tidal_energy.py  tide.py  timeout.py  tox.ini
.github/workflows/: build.yml  test.yml
doc/: conf.py  desc.rst  index.rst
doc/html/: .buildinfo  desc.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/html/_modules/: index.html
doc/html/_modules/seapy/: cdl_parser.html  filt.html  hawaii.html  lib.html  oa.html  plot.html  progressbar.html  qserver.html  tide.html  timeout.html
doc/html/_modules/seapy/model/: grid.html  hycom.html  lib.html  soda.html
doc/html/_modules/seapy/roms/: analysis.html  boundary.html  clim.html  ezgrid.html  forcing.html  initial.html  interp.html  lib.html  ncgen.html  obs.html  obsgen.html
doc/html/_modules/seapy/seawater/: __init__.html  density.html  heat.html  misc.html  salinity.html
doc/html/_sources/: examples.txt
doc/html/_sources/modules/: index.txt  seapy.txt
doc/html/_sources/modules/roms/: index.txt
doc/html/modules/: index.html  seapy.html
doc/html/modules/model/: index.html
doc/html/modules/roms/: index.html
doc/html/modules/seawater/: index.html
doc/modules/: index.rst  seapy.rst
doc/modules/model/: index.rst
doc/modules/roms/: index.rst
docs/: Makefile  conf.py  desc.rst  examples.rst  index.rst
docs/modules/: seapy.rst
docs/modules/seawater/: index.rst
hawaii_coast/: hawaii.shx
model/: __init__.py  grid.py  hycom.py  lib.py  soda.py
roms/: __init__.py  analysis.py  boundary.py  clim.py  ezgrid.py  forcing.py  initial.py  interp.py  lib.py  ncgen.py  obs.py  obsgen.py  tide.py
roms/cdl/: bry_unlimit.cdl  clm_ts.cdl  frc_bulk.cdl  frc_direct.cdl  frc_fluxclm.cdl  frc_qcorr.cdl  frc_rivers.cdl  frc_srelax.cdl  frc_tides.cdl  ini_hydro.cdl  nudge_coef.cdl  roms_grid.cdl  s4dvar_obs.cdl  s4dvar_std_f.cdl  s4dvar_std_i.cdl  zlevel.cdl  zlevel_1d.cdl  zlevel_1d_grid.cdl  zlevel_2d.cdl  zlevel_2d_grid.cdl  zlevel_microbe_1d.cdl  zlevel_microbe_2d.cdl
seapy/: Makefile  Readme.md  __init__.py  cdl_parser.py  constituents.npz  debug.py  environ.py  filt.py  hawaii.py  lib.py  mapping.py  meson.build  oa.py  plot.py  progressbar.py  river.py  tidal_energy.py  tide.py  timeout.py
seapy/hawaii_coast/: __init__.py  hawaii.dbf  hawaii.shp  meson.build
seapy/model/: __init__.py  grid.py  hycom.py  lib.py  meson.build  soda.py
seapy/roms/: __init__.py  analysis.py  boundary.py  clim.py  ezgrid.py  forcing.py  initial.py  interp.py  lib.py  meson.build  ncgen.py  obs.py  obsgen.py  psource.py  tide.py
seapy/roms/cdl/: adsen.cdl  bry_unlimit.cdl  clm_ts.cdl  frc_bulk.cdl  frc_direct.cdl  frc_fluxclm.cdl  frc_qcorr.cdl  frc_rivers.cdl  frc_srelax.cdl  frc_tides.cdl  frc_wave.cdl  frc_windstress.cdl  ini_hydro.cdl  meson.build  nudge_coef.cdl  roms_grid.cdl  s4dvar_obs_rays.cdl  s4dvar_std_b.cdl  s4dvar_std_i.cdl  s4dvar_std_m.cdl  zlevel_1d.cdl  zlevel_1d_grid.cdl  zlevel_2d.cdl  zlevel_2d_grid.cdl  zlevel_microbe_1d.cdl  zlevel_microbe_2d.cdl
seapy/roms/cobalt/: __init__.py  bry.cdl  clim.cdl  cobalt.py  frc_bulk.cdl  frc_cobalt.cdl  frc_direct.cdl  frc_rivers.cdl  his-all.cdl  his.cdl  ini.cdl  meson.build  nudge.cdl  zevel_dia.cdl  zlevel-cobalt-2d.cdl  zlevel.cdl
seapy/seawater/: __init__.py  heat.py  meson.build  misc.py
seawater/: density.py  salinity.py
src/: Makefile  bri_fortran_test.F  hindices.F  hindices.f  makefile  oalib.F  oalib.f
tests/: meteo.nc  ocean.nc  roms_grd.nc  test_fortran_extensions.py  test_seapy.py
