[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seapy"
version = "1.1.9"
license = {text = "MIT"}
description = "State Estimation and Analysis in PYthon"
readme = "README.md"
authors = [
  { name = "Brian Powell", email = "powellb@hawaii.edu" },
]
maintainers = [
  { name = "Brian Powell", email = "powellb@hawaii.edu" },
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/powellb/seapy"
"Bug Tracker" = "https://github.com/powellb/seapy/issues"

[project.scripts]
convert_clim = "seapy.bin.convert_clim:main" # Assuming main function in these scripts
convert_frc = "seapy.bin.convert_frc:main"   # You might need to adjust this if they're not functions

[tool.setuptools.packages.find]
where = ["."]
include = ["seapy*", "seapy.external*"]

[tool.setuptools.package-data]
"seapy" = [
    "constituents.npz",
    "hawaii_coast/*",
    "roms/cdl/*.cdl",
    "roms/cobalt/*.cdl"
]

[tool.setuptools.ext_modules]
oalib = {sources = ["src/oalib.f"], f2py_options = ["noopt"], extra_f77_compile_args = [], library_dirs = [], define_macros = {NPY_NO_DEPRECATED_API = "NPY_1_7_API_VERSION"}}
hindices = {sources = ["src/hindices.f"], f2py_options = ["noopt"], extra_f77_compile_args = [], library_dirs = [], define_macros = {NPY_NO_DEPRECATED_API = "NPY_1_7_API_VERSION"}}
extractobs = {sources = ["src/extract_obs.f"], f2py_options = ["noopt"], extra_f77_compile_args = [], library_dirs = [], define_macros = {NPY_NO_DEPRECATED_API = "NPY_1_7_API_VERSION"}}
