python_sources = [
    '__init__.py',
    'analysis.py',
    'boundary.py',
    'clim.py',
    'ezgrid.py',
    'forcing.py',
    'initial.py',
    'interp.py',
    'lib.py',
    'ncgen.py',
    'obs.py',
    'obsgen.py',
    'psource.py',
    'tide.py'
]

py3.install_sources(
  python_sources,
  subdir: 'seapy/roms'
)

subdir('cdl')
subdir('cobalt')