python_sources = [
    'adsen.cdl',
    'bry_unlimit.cdl',
    'clm_ts.cdl',
    'frc_bulk.cdl',
    'frc_direct.cdl',
    'frc_fluxclm.cdl',
    'frc_qcorr.cdl',
    'frc_rivers.cdl',
    'frc_srelax.cdl',
    'frc_tides.cdl',
    'frc_wave.cdl',
    'frc_windstress.cdl',
    'ini_hydro.cdl',
    'nudge_coef.cdl',
    'roms_grid.cdl',
    's4dvar_obs.cdl',
    's4dvar_obs_rays.cdl',
    's4dvar_std_b.cdl',
    's4dvar_std_f.cdl',
    's4dvar_std_i.cdl',
    's4dvar_std_m.cdl',
    'zlevel_1d.cdl',
    'zlevel_1d_grid.cdl',
    'zlevel_2d.cdl',
    'zlevel_2d_grid.cdl',
    'zlevel_microbe_1d.cdl',
    'zlevel_microbe_2d.cdl',
]

py3.install_sources(
  python_sources,
  subdir: 'seapy/roms/cdl'
)