python_sources = [
    '__init__.py',
    'bry.cdl',
    'clim.cdl',
    'cobalt.py',
    'frc_bulk.cdl',
    'frc_cobalt.cdl',
    'his-all.cdl',
    'his.cdl',
    'ini.cdl',
    'nudge.cdl',
    'zevel_dia.cdl',
    'zlevel-cobalt-2d.cdl',
    'zlevel.cdl',
]

py3.install_sources(
  python_sources,
  subdir: 'seapy/roms/cobalt'
)